[gd_scene load_steps=3 format=2]

[ext_resource path="res://my_theme.theme" type="Theme" id=1]
[ext_resource path="res://src/game/dict_editor/dict_editor.gd" type="Script" id=2]

[node name="DictionaryEditor" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1529.0
margin_bottom = 893.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1522.0
margin_bottom = 35.0

[node name="WordLineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 154.0
margin_bottom = 35.0
expand_to_text_length = true

[node name="AddWordButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 158.0
margin_right = 266.0
margin_bottom = 35.0
text = "Add word"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 39.0
margin_right = 1522.0
margin_bottom = 886.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_right = 1522.0
margin_bottom = 847.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_bottom = 847.0

[node name="WordList" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
margin_bottom = 847.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddWordButton" to="." method="_on_AddWordButton_pressed"]
